tests/baselines/reference/getJavaScriptSyntacticDiagnostics19.baseline
// === Syntax Diagnostics ===
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics19.ts':
/tests/cases/fourslash/a.js(1,6): error TS8006: 'enum' declarations can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    enum E { }
         ~
!!! error TS8006: 'enum' declarations can only be used in TypeScript files.